<resources>
    <string name="app_name">Sudoku Application</string>
    <string name="welcome_string">Welcome to SUDOKU!</string>
    <string name="start_game">Start a Game...</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="high_score">Your High Score:</string>
    <string name="score">Score:</string>
    <string name="end_game">End Game</string>
    <string name="your_score">Your Score</string>
    <string name="play_again">Play Again?</string>
    <string name="incorrect">Incorrect. Please try again.</string>
</resources>
