<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:textSize="35dp"
            android:text="@string/welcome_string" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            app:srcCompat="@drawable/balloon_numbers" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/vertical_margin_long"
            android:padding="@dimen/padding_dimens"
            android:text="@string/start_game"
            android:textStyle="bold"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btnEasyGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:text="@string/easy"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:onClick="onStartEasyGame"/>

        <Button
            android:id="@+id/btnMediumGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:text="@string/medium"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:onClick="onStartMediumGame"/>

        <Button
            android:id="@+id/btnHardGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:background="@color/colorPrimary"
            android:text="@string/hard"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:onClick="onStartHardGame"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_long"
        android:orientation="horizontal"
        android:layout_gravity="center|bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:textSize="20dp"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>